# hrtoolkit

./: .gitignore  CLAUDE.md  README.md  claude_code_chat.md  generate_sample_csv.py  notes.txt  pyproject.toml  sample_data.py  succession_app.py  succession_planning.py  team_dynamics.py
.claude/: settings.local.json
samples/: sample_360_reviews.csv
