# Dependencies for the AI-Powered Succession Planning Application
# Install with: uv pip install streamlit pandas numpy plotly openpyxl

[project]
name = "succession-planning-app"
version = "1.0.0"
description = "AI-Powered Succession Planning Application using 360-degree reviews"
readme = "README.md"
authors = [
    {name = "AI Assistant", email = "assistant@example.com"},
]
requires-python = ">=3.8"

# Core dependencies - install with uv pip install
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0", 
    "numpy>=1.24.0",
    "plotly>=5.15.0",
    "openpyxl>=3.1.0",
]

# Development dependencies (optional)
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"